# soil-engine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
include/: base.h  engine.h  exception.h  frame_limiter.h  id.h  log.h  window.h  window_event.h
include/event/: event.h  handler.hpp  observable.hpp
include/file/: font.h  sequence.hpp  sprite_sheet.h
include/input/: constants.hpp  event.h  event_map.h  manager.h
include/input/mouse/: picker.h
include/sound/: buffer.h  file.h  listener.h  manager.h  source.h  wave.h
include/sound/event/: event.hpp  source_event.h
include/sound/openal/: buffer.h  listener.h  manager.h  source.h
include/stage/: interfaces.h  manager.h  resources.h  stage.h
include/stage/event/: component.h  game_event.h  node.h  stage_event.h
include/stage/scene/: component_feature.h  debug_drawer.h  grid_scene.h  input.h  node.h  scene.h
include/stage/scene/component/: aabb.h  bounding_volume.h  component.h  instance_data.h  listener.h  listener_component.h  mesh_component.h  renderable.h  renderable.hpp  renderable_instance.h  sound.h  visual_component.h
include/util/: deque.hpp  files.h  ini_file.h  pointer_cache.hpp  strings.h
include/video/: adapter.h  event.h  manager.h  viewer.h
include/video/buffer/: cursor.h  ebo.h  fb.h  frame_buffer.h  object.h  ubo.h  uniform_buffer_object.h  vbo.h
include/video/mesh/: cache.h  data.h  mesh.h  prefab.h
include/video/model/: animation.h  animation_node.h  letter.h  material.h
include/video/render/: batch.h  container.h  forward_rendering.h  pipeline.h  properties.h  quad.h  renderable.h  renderable_object.h  state.h  technique.h  vertex_array.h
include/video/shader/: cache.h  definition.h  instance_shader.h  shader.h  stage.h
include/video/texture/: data.h  manager.h  parameter.h  texture.h
include/video/vertex/: attribute_pointer.h  vao.h  vao_creator.h  vertex.h
include/world/: intersection.h
include/world/collision/: frustum.h
include/world/entity/: object_3d.h
include/world/volume/: aabb.h  container.h  frustum.h  quad_tree.h  volume.hpp
samples/: CMakeLists.txt  README.md
samples/assets/Fonts/: Calibri.fnt
samples/assets/Shader/: Basic.frag.glsl  Basic.vert.glsl  Character.frag.glsl  Character.vert.glsl  Instancing.frag.glsl  Instancing.vert.glsl  Line.frag.glsl  Line.vert.glsl  ShapeTile.frag.glsl  ShapeTile.vert.glsl  ShapeTileInstance.frag.glsl  ShapeTileInstance.vert.glsl  TextShader.frag.glsl  TextShader.vert.glsl
samples/assets/Shader/includes/: gamma.glsl  header.glsl
samples/assets/Textures/Tiles/: Gui.json
samples/src/: asset.h.in  main.cc
samples/src/basic/: shader.cc  shader.h  shape.cc  shape.h  stage.cc  stage.h
samples/src/common/: rotation_node.cc  rotation_node.h  stage.cc  stage.h  statistic_scene.cc  statistic_scene.h
samples/src/gui/: character_shader.cc  character_shader.h  label.cc  label.h  letter_shader.cc  plane.cc  plane.h  shape_tile_instance_shader.cc  shape_tile_instance_shader.h  shape_tile_shader.cc  shape_tile_shader.h  stage.cc  stage.h
samples/src/gui/component/: shape_tile.cc  shape_tile.h  shape_tile_instance.cc  shape_tile_instance.h  text.cc  text.h
samples/src/gui/menu/: item.cc  item.h  menu.cc  menu.h  scrollbar.cc  scrollbar.h
samples/src/instancing/: shader.cc  shader.h  shape_instance.cc  shape_instance.h  stage.cc  stage.h
samples/src/line/: line_instance.cc  line_instance.h  shader.cc  shader.h  stage.cc  stage.h
samples/src/text/: letter_component.cc  letter_component.h  node.cc  node.h  shader.cc  shader.h  stage.cc  stage.h
samples/src/volume/: stage.cc  stage.h
src/: engine.cc  exception.cc  frame_limiter.cc  id.cc  log.cc  window.cc  window_event.cc
src/event/: event.cc
src/file/: font.cc  sprite_sheet.cc
src/input/: event.cc  event_map.cc  manager.cc
src/input/mouse/: picker.cc
src/sound/: buffer.cc  file.cc  listener.cc  manager.cc  source.cc  wave.cc
src/sound/event/: source_event.cc
src/sound/openal/: buffer.cc  listener.cc  manager.cc  source.cc
src/stage/: manager.cc  resources.cc  stage.cc
src/stage/event/: component.cc  game_event.cc  node.cc  stage_event.cc
src/stage/scene/: component_feature.cc  grid_scene.cc  input.cc  node.cc  scene.cc
src/util/: files.cc  ini_file.cc  strings.cc
src/video/: adapter.cc  event.cc  manager.cc
src/video/buffer/: cursor.cc  ebo.cc  fb.cc  frame_buffer.cc  object.cc  ubo.cc  uniform_buffer_object.cc  vbo.cc
src/video/mesh/: cache.cc  data.cc  mesh.cc  prefab.cc
src/video/model/: animation.cc  animation_node.cc  letter.cc  material.cc
src/video/render/: batch.cc  container.cc  forward_rendering.cc  pipeline.cc  properties.cc  quad.cc  renderable.cc  state.cc  technique.cc  vertex_array.cc
src/video/shader/: cache.cc  definition.cc  shader.cc  stage.cc
src/video/texture/: data.cc  manager.cc  texture.cc
src/video/vertex/: attribute_pointer.cc  vao.cc  vao_creator.cc  vertex.cc
src/world/: intersection.cc
src/world/collision/: frustum.cc  frustum_test.cc
src/world/entity/: object_3d.cc
src/world/volume/: aabb.cc  frustum.cc  quad_tree.cc
test/: CMakeLists.txt  resources.h.in
test/file/: font_test.cc  sprite_sheet_test.cc
test/resources/file/: Font.fnt
test/stage/: manager_test.cc  mocks.hpp  stage_test.cc
test/stage/scene/: mocks.hpp  node_test.cc  scene_test.cc
test/stage/scene/component/: bounding_volume_test.cc  component_test.cc  mocks.hpp
test/stage/scene/gui/: rectangle_test.cc  root_test.cc
test/stage/scene/gui/container/: h_box_test.cc  v_box_test.cc
test/stage/scene/hook/: mocks.hpp
test/stage/scene/space/: quad_tree_test.cc
test/util/: files_test.cc
test/video/render/instance/: buffer_test.cc  test_buffer_object.cc  test_buffer_object.h  test_instance.cc  test_instance.h
test/video/render/step/: sort_test.cc
test/world/: intersection_test.cc
test/world/collision/: frustum_test.cc
test/world/volume/: aabb_test.cc  frustum_test.cc  quad_tree_test.cc
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: init.cpp
(+84 files in other folders)
